Add schedule IC 2022
Signed-off-by: Esteban Zamora <esteban.zamora.al@gmail.com>

--- a/tools/docker/Dockerfile
+++ b/tools/docker/Dockerfile
@@ -1,4 +1,4 @@
-# (C) Copyright 2022 Hewlett Packard Enterprise Development LP.
+# (C) Copyright 2020-2022 Hewlett Packard Enterprise Development LP.
 
 FROM ubuntu:focal-20220113 as base
 
