--- a/tools/docker/Makefile
+++ b/tools/docker/Makefile
@@ -1,4 +1,4 @@
-# (C) Copyright 2022 Hewlett Packard Enterprise Development LP.
+# (C) Copyright 2020-2022 Hewlett Packard Enterprise Development LP.
 
 .PHONY: image publish
 
