--- a/tools/docker/files/requirements.txt
+++ b/tools/docker/files/requirements.txt
@@ -8,7 +8,11 @@ recommonmark==0.6.0
 plantweb==1.1.0
 sphinx-versions==1.1.3
 sphinx-tabs==1.1.13
-tornado==5.1.1
+
+# Notebooks requirements
+tornado==6.1
+jupyter==1.0.0
+ipython==8.1.1
 
 # Testing requirements
 tox==3.14.0
