--- a/tools/docker/files/requirements.txt
+++ b/tools/docker/files/requirements.txt
@@ -9,10 +9,13 @@ plantweb==1.1.0
 sphinx-versions==1.1.3
 sphinx-tabs==1.1.13
 
-# Notebooks requirements
+# Jupyter requirements
 tornado==6.1
-jupyter==1.0.0
 ipython==8.1.1
+jupyter==1.0.0
+jupyterlab==3.3.0
+jupyter_contrib_nbextensions==0.5.1
+RISE==5.7.1
 
 # Testing requirements
 tox==3.14.0
