Create python package for sensor commands example
Signed-off-by: Esteban Zamora <esteban.zamora.al@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,14 @@ Module.symvers
 Mkfile.old
 dkms.conf
 
+# Python packages
+*.egg
+*.egg-info
+dist/*
+build/*
+*.py[cod]
+__pycache__
+
 # Devenv
 .vagrant
 .Trash*
