Add ctor hash table to C SensorFactory
Signed-off-by: Esteban Zamora <esteban.zamora.al@gmail.com>

--- a/examples/c/sensor_commands/CMakeLists.txt
+++ b/examples/c/sensor_commands/CMakeLists.txt
@@ -66,6 +66,7 @@ install(
   DESTINATION include
   FILES_MATCHING PATTERN "*.h"
   PATTERN "_*" EXCLUDE
+  PATTERN "external" EXCLUDE
 )
 
 configure_file(
